<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/login_grad"
    android:padding="20dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="5"
        android:src="@drawable/logo">
    </ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/username_text"
        android:textColor="@color/colorTextIcon"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:padding="10sp">
    </TextView>
    <EditText
        android:background="@drawable/et_background"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:textColorHint="@color/colorSecondaryText"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:hint="@string/username_hint">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/password_text"
        android:textColor="@color/colorTextIcon"
        android:textSize="18sp"
        android:padding="10sp">
    </TextView>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:textColorHint="@color/colorSecondaryText"
        android:paddingBottom="5dp"
        android:paddingStart="15dp"
        android:background="@drawable/et_background"
        android:inputType="textPassword"
        android:hint="@string/password_hint">
    </EditText>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:onClick="login"
        android:text="@string/login_btn"
        android:background="@drawable/et_background"
        android:textColor="@color/colorTextIcon"
        android:layout_margin="30dp">
    </Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/forget_password_txt"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:textAlignment="center"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/register_txt">
    </TextView>
</LinearLayout>