<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <LinearLayout
            android:onClick="currentSemester"
            android:background="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:src="@drawable/current_semester_icon"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />
            <TextView
                android:textColor="@color/colorTextIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/current_semester_txt"
                android:gravity="center"
                android:textSize="18sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorDivider"
                >
            </View>
            <TextView
                android:layout_gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/current_semester_hint">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:onClick="previousSemester"
            android:background="@color/colorPrimaryLight"
            android:gravity="bottom"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:src="@drawable/previous_semester_icon"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />
            <TextView
                android:textColor="@color/colorTextIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/previous_semester_txt"
                android:gravity="center"
                android:textSize="18sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorDivider"
                >
            </View>
            <TextView
                android:layout_gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/previous_semester_hint">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:onClick="profile"
        android:gravity="bottom"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:padding="20dp"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/person_icon"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp">
        </ImageView>
        <TextView
            android:textColor="@color/colorTextIcon"
            android:layout_marginTop="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/semester_settings_txt"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorDivider">
        </View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/semester_settings_hint"
            android:layout_marginTop="40dp">
        </TextView>
    </LinearLayout>
</LinearLayout>