<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:elevation="10dp"
                android:background="@color/deer_purple"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/semester"
                        android:layout_width="match_parent"
                        android:layout_height="90dp">
                        <TextView
                            android:textColor="@color/colorTextIcon"
                            android:id="@+id/semester_no"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:textSize="40sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                        <TextView
                            android:textColor="@color/colorTextIcon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:text="@string/semester"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp">
                        <TextView
                            android:id="@+id/gpa"
                            android:textColor="@color/colorTextIcon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|center_horizontal"
                            android:textSize="40sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                        <TextView
                            android:textColor="@color/colorTextIcon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="20sp"
                            android:text="@string/gpa"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:elevation="15dp"
                android:background="@drawable/round_white_background"
                android:src="@drawable/person_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="140dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <TextView
                    android:textColor="@color/colorTextIcon"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <TextView
                    android:textColor="@color/colorTextIcon"
                    android:id="@+id/name"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <TextView
                    android:textColor="@color/colorTextIcon"
                    android:text="@string/id"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/eg_no"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <TextView
                    android:textColor="@color/colorTextIcon"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/email"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3">
                <TextView
                    android:textColor="@color/colorTextIcon"
                    android:text="@string/department"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/department"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/back"
            android:onClick="back"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorTextIcon"
            android:background="@color/indigo"/>
    </LinearLayout>

</LinearLayout>