<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:onClick="lecTimes"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/module_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="Module"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"/>
        <ImageView
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_access_alarms_black_24dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp">
        </ImageView>
        <TextView
            android:textColor="@color/colorTextIcon"
            android:layout_marginTop="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/lectures_txt"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorDivider">
        </View>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <LinearLayout
            android:onClick="assignments"
            android:background="@color/colorPrimaryDark"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">
            <ImageView
                android:src="@drawable/assignment_icon"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />
            <TextView
                android:textColor="@color/colorTextIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/assignment_txt"
                android:gravity="center"
                android:textSize="18sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorDivider"
                >
            </View>
        </LinearLayout>
        <LinearLayout
            android:onClick="extraNotes"
            android:background="@color/colorPrimaryLight"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">
            <ImageView
                android:src="@drawable/previous_semester_icon"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />
            <TextView
                android:textColor="@color/colorTextIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/extra_notes_txt"
                android:gravity="center"
                android:textSize="18sp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorDivider"
                >
            </View>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>